# RCaptcha

./: .gitignore  README.md
JCaptcha/: pom.xml
JCaptcha/src/main/java/com/captcha/: ImageCaptcha.java  LoadLibs.java  SliderCaptcha.java
JCaptcha/src/main/java/com/xxscloud/beer/captcha/: ImageCaptcha.java  LoadLibs.java  SliderCaptcha.java
RCaptcha/: Cargo.toml
RCaptcha/java/com/captcha/: ImageCaptcha.java
RCaptcha/src/: captcha_error.rs  code_captcha.rs  lib.rs  slider_captcha.rs
RCaptchaWasm/: Cargo.toml  build.rs
RCaptchaWasm/src/: lib.rs
